docs/samples/invalid/type_mismatch.edl
let is_open: bool = true;
let total: int = is_open;
